--- a/styles.css
+++ b/styles.css
@@ -122,9 +122,12 @@ button {
 }
 
 p {
-    height: auto;
-    text-align: right;
-    margin-bottom: auto;
-    padding: 0.25em;
-    font-size: 40px;
+    height: 120px;
+    margin: auto;
+    margin-top: 0.25em;
+    padding: 0 0.25em;
+    font-size: 60px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
